<resources>
    <!-- WifiP2pFragment -->
    <string name="app_name">TerryTalks</string>
    <string name="name">Name</string>
    <string name="state">State</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="stop">Stop</string>
    <string name="wifi_p2p_unsupported">WiFi P2P is not supported</string>
    <string name="wifi_p2p_busy">WiFi P2P is busy</string>
    <string name="wifi_p2p_error">WiFi P2P has error</string>
    <string name="wifi_p2p_no_service_request">WiFi P2P has no service request</string>
    <string name="this_is_a_bug">A bug</string>
    <string name="available">Available</string>
    <string name="connected">Connected</string>
    <string name="failed">Failed</string>
    <string name="invited">Invited</string>
    <string name="unavailable">Unavailable</string>
    <string name="terry_talks_is_still_running">TerryTalks is still running</string>
    <string name="terry_talks_still_runs_in_background">TerryTalks still runs in background</string>
    <!-- FSM V2.1 -->
    <string name="initializing">Initializing</string>
    <string name="searching">Searching</string>
    <string name="idle">Idle</string>
    <string name="rejecting">Rejecting</string>
    <string name="teacher">Teacher</string>
    <string name="teacher_disconnecting">Teacher disconnecting</string>
    <string name="connecting">Connecting</string>
    <string name="canceling">Candeling</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="registering">Registering</string>
    <string name="student">Student</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="stopping">Stopping</string>
    <string name="stopped">Stopped</string>
    <string name="unknown">Unknown</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_try_later">Please try later</string>
    <string name="please_refresh_again">Please refresh again</string>
    <string name="please_restart_app">Please restart APP</string>
    <string name="please_reboot">Please reboot</string>
    <string name="please_the_client_connect_again">Please the client connect again</string>
    <string name="please_wait_for_disconnecting">Please wait for disconnecting</string>
    <string name="please_wait_for_initializing">Please wait for initializing</string>
    <string name="please_turn_on_wifi">Please turn on Wi-Fi</string>
    <string name="please_rename_when_idle">Please rename when idle</string>
    <!-- PasswordFragment -->
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="invalid_password">Invalid password</string>
    <!-- NameFragment -->
    <string name="rename">Rename</string>
</resources>
