<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vernonsung.terrytalk.WifiP2pActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/state"
        android:id="@+id/textViewState"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textViewName"
        android:paddingStart="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ip"
        android:id="@+id/textViewIp"
        android:layout_below="@id/textViewName"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/port"
        android:id="@+id/textViewPort"
        android:layout_alignTop="@id/textViewIp"
        android:layout_toEndOf="@id/textViewIp"
        android:paddingStart="10dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:id="@+id/buttonRefresh"
        android:layout_below="@id/textViewIp"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/buttonStop"
        android:layout_below="@id/textViewIp"
        android:layout_toEndOf="@id/buttonRefresh"
        android:enabled="false" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextPort"
        android:layout_above="@+id/listViewDevices"
        android:layout_toEndOf="@+id/buttonStop"
        android:paddingStart="10dp" />
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewDevices"
        android:layout_below="@+id/buttonRefresh"
        android:layout_alignParentStart="true" />

</RelativeLayout>
