<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WifiP2pFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:id="@+id/textViewState"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:textAppearance="@android:style/TextAppearance.Medium" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ip"
        android:id="@+id/textViewIp"
        android:layout_below="@id/textViewName"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/port"
        android:id="@+id/textViewPort"
        android:layout_alignTop="@id/textViewIp"
        android:layout_alignParentStart="true" />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayoutDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewPort" >
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewDevices" />
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
